<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        android:hint="@string/title"
        android:inputType="textCapSentences|textAutoCorrect" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences|textLongMessage|textAutoCorrect|text|textMultiLine"
                android:ems="10"
                android:id="@+id/edit_text"
                android:hint="@string/text"
                android:gravity="top" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:id="@+id/save"
                    android:layout_weight="0.5"
                    android:typeface="sans"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_notify_time"
                    android:id="@+id/date_time"
                    android:layout_weight="0.5"
                    android:typeface="sans"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>