<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="@dimen/text_top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title"
            android:id="@+id/title"
            android:layout_marginStart="@dimen/text_left"
            android:layout_marginLeft="@dimen/text_left"
            android:textColor="@color/colorAccent"
            android:typeface="monospace"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/text"
            android:id="@+id/text"
            android:layout_marginStart="@dimen/text_left"
            android:layout_marginLeft="@dimen/text_left"
            android:textColor="@color/black"
            android:typeface="sans"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Date notif"
            android:id="@+id/date_n"
            android:layout_gravity="end"
            android:textColor="@color/colorAccent"
            android:layout_marginEnd="@dimen/text_right"
            android:layout_marginRight="@dimen/text_right"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/date"
            android:id="@+id/date"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/text_right"
            android:layout_marginRight="@dimen/text_right"/>
    </LinearLayout>

</FrameLayout>